Revise README for Fishda game details
Updated project name and description, added detailed game mechanics, features, and requirements sections to README.